# NeuroHID

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  codecov.yml  nextest.toml  pr_body.md  rustfmt.toml
apps/neuroide/: Cargo.toml  README.md
apps/neuroide-hub/: Cargo.toml  README.md
apps/neuroide-hub/src/: data_bus.rs  layout.rs  lib.rs  stream_console.rs  theme.rs  workbench.rs
apps/neuroide-hub/src/app/: bottom_panel.rs  command_palette.rs  mod.rs  notifications.rs  shortcuts.rs  sidebar.rs  status_bar.rs  viewport.rs
apps/neuroide-hub/src/calibration/: mod.rs  panel.rs  wizard.rs
apps/neuroide-hub/src/calibration/games/: target_tracking.rs
apps/neuroide-hub/src/screens/: calibration.rs  devices.rs  extensions.rs  mod.rs  python_lab.rs  training.rs
apps/neuroide-hub/src/screens/settings/: device.rs  mod.rs  pipeline.rs  ui_prefs.rs
apps/neuroide-hub/src/service_manager/: commands.rs  embedded.rs  external.rs  mod.rs  snapshot.rs  tests.rs
apps/neuroide-hub/src/widgets/: accelerometer.rs  band_power.rs  channel_meta.rs  decoder_monitor.rs  fft_plot.rs  focus.rs  mod.rs  signal_quality.rs  time_series.rs
apps/neuroide/src/: main.rs
crates/emotiv-cortex-cli/: Cargo.toml
crates/emotiv-cortex-cli/src/: lsl.rs  main.rs
crates/ipckit/: Cargo.toml
crates/neurohid/: Cargo.toml  README.md
crates/neurohid-calibration/: Cargo.toml  README.md
crates/neurohid-calibration/src/: lib.rs  panel.rs  wizard.rs
crates/neurohid-calibration/src/games/: grid_maze.rs  mod.rs  target_tracking.rs
crates/neurohid-core/: Cargo.toml  README.md
crates/neurohid-core/src/: extension_registry.rs  lib.rs  main.rs  observability.rs  runtime.rs  service.rs
crates/neurohid-core/src/recording/: mod.rs  xdf_writer.rs
crates/neurohid-core/src/service/: handle.rs  mod.rs  state.rs
crates/neurohid-core/src/tasks/: action.rs  decoder.rs  device.rs  ipc.rs  latency.rs  latency_alert.rs  mod.rs  outlet.rs  recording.rs  replay_source.rs  session_logger.rs  signal.rs
crates/neurohid-core/src/tasks/decoder/: inference.rs  mod.rs  model.rs  training.rs
crates/neurohid-core/src/tasks/device/: discovery.rs  mod.rs  streaming.rs
crates/neurohid-core/src/tasks/ipc/: broker_task.rs  client_task.rs  mod.rs
crates/neurohid-core/src/tasks/signal/: config.rs  mod.rs  pipeline_task.rs
crates/neurohid-core/tests/: extension_outlet_e2e.rs  pipeline_integration.rs
crates/neurohid-device/: Cargo.toml  README.md
crates/neurohid-device/src/: brainflow.rs  brainflow_native.rs  lib.rs  mock.rs  serial.rs  traits.rs
crates/neurohid-device/src/brainflow/: board_map.rs  device.rs  mod.rs  provider.rs  stream.rs
crates/neurohid-device/src/emotiv/: cortex_client.rs  device.rs  mod.rs  protocol.rs  provider.rs
crates/neurohid-device/src/lsl/: device.rs  mod.rs  provider.rs
crates/neurohid-hub/: Cargo.toml  README.md
crates/neurohid-hub/src/: app.rs  data_bus.rs  layout.rs  lib.rs  main.rs  service_manager.rs  state.rs  stream_console.rs  theme.rs  workbench.rs
crates/neurohid-hub/src/app/: command_palette.rs  mod.rs  notifications.rs  viewport.rs
crates/neurohid-hub/src/screens/: calibration.rs  dashboard.rs  devices.rs  extensions.rs  jupyter_ide.rs  mod.rs  profiles.rs  python_lab.rs  settings.rs  training.rs  visualization.rs
crates/neurohid-hub/src/screens/settings/: device.rs  mod.rs  system.rs
crates/neurohid-hub/src/service_manager/: commands.rs  snapshot.rs  tests.rs
crates/neurohid-hub/src/widgets/: accelerometer.rs  action_preview.rs  band_power.rs  decoder_monitor.rs  fft_plot.rs  focus.rs  headplot.rs  mod.rs  signal_quality.rs  spectrogram.rs  stream_metadata.rs  time_series.rs
crates/neurohid-ipc/: Cargo.toml  README.md
crates/neurohid-ipc/src/: broker.rs  client.rs  lib.rs  protocol.rs  server.rs  types.rs
crates/neurohid-outlet-example/: Cargo.toml  README.md
crates/neurohid-outlet-example/src/: lib.rs
crates/neurohid-platform/: Cargo.toml  README.md
crates/neurohid-platform/src/: lib.rs  linux.rs  macos.rs  traits.rs  windows.rs
crates/neurohid-py/: Cargo.toml  README.md
crates/neurohid-py/src/: errors.rs  ipc.rs  lib.rs  platform.rs  runtime.rs  signal.rs  storage.rs  streams.rs  types.rs
crates/neurohid-service/: Cargo.toml  README.md
crates/neurohid-service/src/: main.rs  runtime_events.rs
crates/neurohid-service/src/ipc_server/: events.rs  mod.rs
crates/neurohid-signal/: Cargo.toml  README.md
crates/neurohid-signal/src/: buffer.rs  features.rs  filter.rs  lib.rs  pipeline.rs
crates/neurohid-storage/: Cargo.toml  README.md
crates/neurohid-storage/src/: config.rs  credentials.rs  lib.rs  paths.rs  profile.rs  secure.rs
crates/neurohid-types/: Cargo.toml  README.md
crates/neurohid-types/src/: action.rs  config.rs  control.rs  decoder_contract.rs  device.rs  error.rs  event.rs  ipc.rs  ipc_v2.rs  ipc_v3.rs  learning.rs  lib.rs  model.rs  observability.rs  observation.rs  outlet.rs  profile.rs  recording.rs  reward.rs  signal.rs  signal_contract.rs
crates/neurohid-validate/: Cargo.toml  README.md
crates/neurohid-validate/src/: main.rs
crates/neurohid/examples/: embedded_runtime.rs
crates/neurohid/src/: config.rs  lib.rs  tracing_init.rs
crates/neurohid/src/device/: api.rs  mod.rs
docs/: AGENTS.md  (+27 more)
python/: AGENTS.md  README.md  pyproject.toml
python/notebooks/: 00_scratchpad.ipynb  10_live_runtime_monitor.ipynb  20_offline_training_flow.ipynb  30_eegnet_from_runtime_features.ipynb  README.md
python/src/neurohid/: __init__.py
python/src/neurohid_bindings/: __init__.py
python/src/neurohid_ml/: __init__.py  cli.py  control.py  ipc.py  ipc_constants.py  lab_kernel.py  notebook.py  telemetry.py
python/src/neurohid_ml/bridge/: __init__.py
python/src/neurohid_ml/decoder/: __init__.py
python/src/neurohid_ml/errp/: __init__.py
python/src/neurohid_ml/trainer/: __init__.py
python/tests/: test_bridge.py  test_cli_and_clients.py  test_control_client.py  test_decoder_and_errp.py  test_e2e_service_client.py  test_lab_kernel.py  test_notebook_helpers.py  test_trainer.py
(+257 files in other folders)
