[workspace]
resolver = "2"

members = [
    "crates/ipckit",
    "crates/neurohid",
    "crates/neurohid-sdk",
    "crates/neurohid-types",
    "crates/neurohid-core",
    "crates/neurohid-signal",
    "crates/neurohid-device",
    "crates/neurohid-platform",
    "crates/neurohid-storage",
    "crates/neurohid-ipc",
    "crates/neurohid-calibration",
    "crates/neurohid-hub",
]

# Shared dependencies across all crates - ensures version consistency
[workspace.dependencies]
# Async runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
toml = "0.9.8"

# IPC
ipckit = "0.1"

# Error handling
thiserror = "2.0.18"
anyhow = "1.0.101"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

# Numeric / Signal processing
ndarray = "0.17.2"
num-complex = "0.4.6"
rustfft = "6.4.1"

# Cross-platform abstractions
dirs = "6.0.0"

# Security
keyring = { version = "3.6.3", features = [
    "linux-native",
    "apple-native",
    "windows-native",
] }
aes-gcm = "0.10.3"
rand = "0.10.0"
base64 = "0.22.1"

# Time
chrono = { version = "0.4.43", features = ["serde"] }

# GUI framework
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false }

# Testing
approx = "0.5.1"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jmduea/neurohid"

[patch.crates-io]
lsl-sys = { git = "https://github.com/labstreaminglayer/liblsl-rust.git", rev = "afa1d251674591c11ebc06070de60914b6dafccf", package = "lsl-sys" }

[workspace.lints.rust]
unsafe_code = "warn"
unused = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
