[package]
name = "neuroide"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "NeuroIDE — desktop BCI workbench built on the NeuroHID framework"

[[bin]]
name = "neuroide"
path = "src/main.rs"

[dependencies]
neuroide-hub = { path = "../neuroide-hub" }
neurohid-core = { path = "../../crates/neurohid-core" }
neurohid-types = { path = "../../crates/neurohid-types" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = "0.2.0"
log = "0.4"
egui_logger = "0.9.2"
egui = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
eframe = { workspace = true, features = ["default_fonts", "glow", "x11"] }

[target.'cfg(windows)'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"] }

[lints]
workspace = true
