[package]
name = "ipckit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

description = "Local cross-platform framed JSON IPC primitives for NeuroHID"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
