[package]
name = "neurohid-calibration"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Calibration games and wizard for NeuroHID"

[lib]
name = "neurohid_calibration"
path = "src/lib.rs"

[dependencies]
neurohid-types = { path = "../neurohid-types" }
neurohid-device = { path = "../neurohid-device" }
neurohid-signal = { path = "../neurohid-signal" }
neurohid-storage = { path = "../neurohid-storage" }

# GUI framework — egui is platform-agnostic, eframe needs platform-specific windowing
egui = { workspace = true }
armas = { version = "0.1.2" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Random for game mechanics
rand = { workspace = true }

# Time handling
chrono = { workspace = true }

[features]
default = []
wayland = ["eframe/wayland"]

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
eframe = { workspace = true, features = ["default_fonts", "glow", "x11"] }

[target.'cfg(windows)'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"] }

[dev-dependencies]
