[package]
name = "neurohid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "NeuroHID core service - the main background process"

[lib]
name = "neurohid_core"
path = "src/lib.rs"

[dependencies]
neurohid-types = { path = "../neurohid-types" }
neurohid-device = { path = "../neurohid-device" }
neurohid-signal = { path = "../neurohid-signal" }
neurohid-platform = { path = "../neurohid-platform" }
neurohid-storage = { path = "../neurohid-storage" }
neurohid-ipc = { path = "../neurohid-ipc" }

# Async runtime
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
