[package]
name = "neurohid-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "NeuroHID core service - the main background process"

[lib]
name = "neurohid_core"
path = "src/lib.rs"

[features]
default = ["device-lsl"]
device-lsl = ["neurohid-device/lsl", "dep:lsl"]
brainflow = ["neurohid-device/brainflow"]

[dependencies]
neurohid-types = { path = "../neurohid-types" }
neurohid-device = { path = "../neurohid-device", default-features = false }
neurohid-signal = { path = "../neurohid-signal" }
neurohid-platform = { path = "../neurohid-platform" }
neurohid-storage = { path = "../neurohid-storage" }
neurohid-ipc = { path = "../neurohid-ipc" }

# Async runtime
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async trait support
async-trait = "0.1"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lsl = { version = "0.1", optional = true }
tract-onnx = "0.22"

[dev-dependencies]
tokio-test = "0.4"
xdf = "0.1.2"
