[package]
name = "neurohid-device"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Device abstraction layer for biosensor devices"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# Lab Streaming Layer
lsl = { version = "0.1", optional = true }
serialport = { version = "4.7.3", default-features = false }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["lsl"]
lsl = ["dep:lsl"]
brainflow = []
