[package]
name = "neurohid-device"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Device abstraction layer for biosensor devices"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# Lab Streaming Layer
lsl = { version = "0.1", optional = true }
serialport = { version = "4.7.3", default-features = false }

# Real BrainFlow SDK (optional; requires C++ libs built first per docs/brainflow.md)
brainflow = { git = "https://github.com/brainflow-dev/brainflow", tag = "5.13.0", optional = true }
num = { version = "0.4", optional = true }
tokio-util = { version = "0.7", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["lsl"]
lsl = ["dep:lsl"]
brainflow = []
# Real BrainFlow C++/Rust SDK; not in default or CI. Enables optional brainflow crate.
brainflow-native = ["dep:brainflow", "dep:num", "dep:tokio-util"]

[lints]
workspace = true
