[package]
name = "neurohid-hub"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "NeuroHID Hub - unified GUI for device management, calibration, and service control"

[features]
default = []

[dependencies]
neurohid-types = { path = "../neurohid-types" }
neurohid-core = { path = "../neurohid-core" }
neurohid-ipc = { path = "../neurohid-ipc" }
neurohid-calibration = { path = "../neurohid-calibration" }
neurohid-storage = { path = "../neurohid-storage" }

# GUI framework — egui is platform-agnostic, eframe needs platform-specific windowing
egui = { workspace = true }
armas = { version = "0.1.2" }
rustfft = "6.4.1"
egui_dock = { version = "0.18.0" }
egui-async = "0.3.4"
egui_code_editor = "0.2.20"
egui_console = "0.3.1"
egui_logger = "0.9.2"

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time handling
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
eframe = { workspace = true, features = ["default_fonts", "glow", "x11"] }

[target.'cfg(windows)'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"] }

[dev-dependencies]
egui_kittest = "0.33.1"
