[package]
name = "neurohid-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "IPC layer for communication between Rust core and Python ML layer"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# Async runtime
tokio = { workspace = true }
futures = { workspace = true }

# Serialization (we use JSON for debuggability, can optimize later)
serde = { workspace = true }
serde_json = { workspace = true }
prost = "0.13"

ipckit = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
