[package]
name = "neurohid-outlet-example"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Example outlet extension implementing the NeuroHID outlet contract (minimal log-only)"

[lib]
name = "neurohid_outlet_example"
crate-type = ["cdylib"]

[dependencies]
neurohid-types = { path = "../neurohid-types" }
tracing = { workspace = true }
tokio = { version = "1.49", default-features = false, features = ["sync"] }
async-trait = "0.1"

[lints]
workspace = true

[lints.rust]
unsafe_code = "allow"
