[package]
name = "neurohid-platform"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Cross-platform abstractions for HID emulation and system queries"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

# Async traits
async-trait = "0.1"

# Cross-platform input simulation
# enigo provides mouse/keyboard simulation across platforms
enigo = "0.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
# Linux-specific: alternative lower-level access if needed
# uinput = "0.1"
# x11 = { version = "2.21", features = ["xlib"] }

[target.'cfg(target_os = "windows")'.dependencies]
# Windows-specific
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific
core-graphics = "0.25.0"
core-foundation = "0.10.1"

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
