[package]
name = "neurohid-py"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "PyO3 Python bindings for NeuroHID IPC — replaces the ipckit Python package"

[lib]
name = "neurohid_bindings"
crate-type = ["cdylib"]

[dependencies]
# PyO3: stable ABI targeting Python 3.14+ (free-threaded capable)
pyo3 = { workspace = true }

# IPC transport (framing + local-socket connect)
ipckit = { workspace = true }
tokio = { workspace = true }

[lints]
workspace = true
