[package]
name = "neurohid-service"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "NeuroHID headless runtime service — standalone background daemon for biosignal acquisition, decoding, and HID output"

[[bin]]
name = "neurohid-service"
path = "src/main.rs"

[dependencies]
neurohid-core = { path = "../neurohid-core" }
neurohid-ipc = { path = "../neurohid-ipc" }
neurohid-storage = { path = "../neurohid-storage" }
neurohid-types = { path = "../neurohid-types" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"

[lints]
workspace = true
