[package]
name = "neurohid-signal"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Real-time biosignal processing pipeline for NeuroHID"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# FFT for Welch PSD estimation
rustfft = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
