[package]
name = "neurohid-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Secure profile storage with platform keychain integration"

[dependencies]
neurohid-types = { path = "../neurohid-types" }

# Async runtime
tokio = { workspace = true, features = ["fs"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serde_yaml = "0.9"

# Platform keychain access
keyring = { workspace = true }

# Encryption for local files
aes-gcm = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# File paths
dirs = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3.10"
tokio-test = "0.4"

[lints]
workspace = true
