[package]
name = "neurohid-types"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

description = "Core type definitions shared across all NeuroHID components"

# This crate should have minimal dependencies - it's foundational
[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json.workspace = true
