[package]
name = "neurohid"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

description = "Brain-computer interface — transforms EEG devices into standard PC peripherals"
keywords = ["bci", "eeg", "brain-computer-interface", "neurohid", "hid"]
categories = ["science", "accessibility"]

[features]
default = []

[[bin]]
name = "neurohid"
path = "src/bin/neurohid.rs"

[[bin]]
name = "neurohid-service"
path = "src/bin/neurohid-service.rs"

[[bin]]
name = "neurohid-validate"
path = "src/bin/neurohid-validate.rs"

[dependencies]
neurohid-hub = { path = "../neurohid-hub" }
neurohid-core = { path = "../neurohid-core" }
neurohid-storage = { path = "../neurohid-storage" }
neurohid-types = { path = "../neurohid-types" }

# Async runtime
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = "0.2.0"
log = "0.4"
egui_logger = "0.9.2"

# CLI
clap = { version = "4.4", features = ["derive"] }
ctrlc = "3.4"

# Error handling
anyhow = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

# GUI framework
egui = { workspace = true }

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
eframe = { workspace = true, features = ["default_fonts", "glow", "x11"] }

[target.'cfg(windows)'.dependencies]
eframe = { workspace = true, features = ["default_fonts", "glow"] }
windows-service = "0.7"
