[package]
name = "neurohid"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "Brain-computer interface — transforms EEG devices into standard PC peripherals"
keywords = ["bci", "eeg", "brain-computer-interface", "neurohid", "hid"]
categories = ["science", "accessibility"]

[features]
default = []

[lints]
workspace = true
