[package]
name = "neurohid"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "NeuroHID — brain-computer interface framework for translating EEG signals into HID actions"
keywords = ["bci", "eeg", "brain-computer-interface", "neurohid", "hid"]
categories = ["science", "accessibility"]
readme = "README.md"
repository = "https://github.com/jmduea/neurohid"

[lib]
name = "neurohid"
path = "src/lib.rs"

[features]
default = ["types"]
types = ["dep:neurohid-types"]
signal = ["dep:neurohid-signal"]
device = ["dep:neurohid-device"]
device-lsl = ["device", "neurohid-device/lsl"]
device-brainflow = ["device", "neurohid-device/brainflow"]
storage = ["dep:neurohid-storage"]
ipc = ["dep:neurohid-ipc"]
runtime = ["dep:neurohid-core"]
full = [
    "types",
    "signal",
    "device",
    "device-lsl",
    "device-brainflow",
    "storage",
    "ipc",
    "runtime",
]

[dependencies]
neurohid-types = { path = "../neurohid-types", optional = true }
neurohid-signal = { path = "../neurohid-signal", optional = true }
neurohid-device = { path = "../neurohid-device", optional = true }
neurohid-storage = { path = "../neurohid-storage", optional = true }
neurohid-ipc = { path = "../neurohid-ipc", optional = true }
neurohid-core = { path = "../neurohid-core", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tempfile = "3.10"

[lints]
workspace = true
